# tfg-sports-betting

./: .gitignore  main-ingress.yaml
balance-service/: Dockerfile  balance-service  get-dependencies.sh
balance-service/kubernetes/: balance-service.yaml  mongo-root-credentials.yaml  mongodb-service.yaml
balance-service/src/: main.go
bet-service/: Dockerfile  package-lock.json  package.json
bet-service/kubernetes/: bet-service.yaml  mongo-root-credentials.yaml  mongodb-service.yaml
bet-service/src/: main.ts  server.ts
entity-service/: Dockerfile  db-root-credentials.yaml  entityservice-deployment.yaml  pom.xml  rabbitmq-configmap.yaml
entity-service/kubernetes/: db-credentials-secret.yaml  entityservice-deployment.yaml  mysql-configmap.yaml  mysql-deployment.yaml
event-service/: package-lock.json  package.json
event-service/kubernetes/: aws-credentials.yaml  event-service.yaml  mongo-root-credentials.yaml  (+1 more)
live-result-service/: Dockerfile  package-lock.json  package.json  tsconfig.json
odds-service/: Cargo.toml  Dockerfile  README
odds-service/kubernetes/: mongo-root-credentials.yaml  mongodb-service.yaml  odds-service.yaml
odds-service/src/: main.rs
odds-service/src/controllers/: geteventoddsctrl.rs  handleeventresultctrl.rs  mod.rs  utils.rs
odds-service/src/grpc/: server.rs
odds-service/src/grpc/protos/: odds-service.proto
odds-service/src/models/: elo.rs
odds-service/src/persistence/: mod.rs  mongo_client.rs
rabbitmq/: .rabbitmq_statefulsets.yaml.swp  create-rabbitmq.sh  rabbitmq_statefulsets.yaml
webserver/: run.sh
(+84 files in other folders)
