[package]
name = "odds-service"
version = "0.1.0"
authors = ["Roger Oriol Pérez <rogeroriwd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
mongodb = "0.4.0"
tonic = "0.1.0-alpha.5"
futures = "0.1.29"
serde = "1.0.102"
serde_json = "1.0.41"
bson = "0.14.0"