[package]
name = "odds-service"
version = "0.1.0"
authors = ["Roger Oriol Pérez <rogeroriwd@gmail.com>"]
edition = "2018"

[[bin]]
name = "odds-service"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
hyper = "0.14"
mongodb = "0.9.2"
futures = "0.1.29"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
bson = "0.14.1"